--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -1,64 +1,44 @@
 <head>
     <link rel="stylesheet" href="/css/index-style.css">
     <link rel="stylesheet" href="/css/panel.css">
+    <link rel="stylesheet" href="/css/singin.css">
 </head>
 {{> navigation}}
-<div class="container mt-4">
-    
-        <div class="row">
-            <div class="mx-auto" style="width: 30%; margin-bottom: 50px;">
-                <div class="card-body mx-auto">
-                    {{>Messages}}
-                    <h2 class="text-center">Inicio de sesión</h2><br>
-                    <form action="/signin" method="POST" class="login-form">
+<img src="/Resources/funny.gif" class="cover-video" alt="Funny image"> 
+<div class="contrast"></div>
 
-                        <div class="form-group">
-                            <label class="text-uppercase">Usuario</label>
-                            <input type="text" name="Correo" id="Correo" class="form-control" placeholder="Usuario" required>
-                        </div>
-                        <div class="form-group">
-                            <label class="text-uppercase">Contraseña</label>
-                            <input type="password" name="Password" id="Password" class="form-control" placeholder="Contraseña" required>
-                        </div>
-                        <div class="col ml-4" >
-                            <input type="submit" id="Register" class="btn-hover color-8" value="Iniciar sesión"></input>
-                        </div>
-                        <div class="col ml-4">
-                            <button class="btn-hover color-8"><a class=" text-light" href="/links/type">Cuenta nueva</a></button>
-                        </div>
-                    </form>
+<div class="card text-center mx-auto pt-3 mt-5 login">
+  <h2 class="text-white">Iniciar sesion</h2>
+</div>
+
+        <div class="body">
+            {{>Messages}}
+        <form action="/signin" method="POST" class="login-form w-75 mx-auto">
+
+                <div class="mb-3 pt-5">
+                    <label class="text-uppercase">Usuario</label>
+                    <input type="text" name="Correo" id="Correo" class="form-control box" placeholder="Usuario" required>
                 </div>
-            </div>
-            <div class="col-md-8 banner-sec">
-                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            </ol>
-                            <div class="carousel-inner" role="listbox" style="width: 800px;">
-                                <div class="carousel-item active">
-                                    <img class="d-block img-fluid" src="./Resources/5.jpg" alt="First slide">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <div class="banner-text">
-                                            <h2 class="text-light">¡La vida es mejor bailando!</h2>
-                                            <p>Utiliza nuestra API especialmente diseñada para la ubicar lugares donde puedas aprender a bailar.
-                                                encontraras eventos cerca de ti y compartir tu opinión acerca de él.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="./Resources/5.jpg" alt="First slide">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <div class="banner-text">
-                                            <h2 class="text-light">¡La vida es mejor bailando!</h2>
-                                            <p>Utiliza nuestra API especialmente diseñada para la ubicar lugares donde puedas aprender a bailar.
-                                                encontraras eventos cerca de ti y compartir tu opinión acerca de él.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                <div class="mb-3 pt-2">
+                    <label class="text-uppercase">Contraseña</label>
+                    <input type="password" name="Password" id="Password" class="form-control box" placeholder="Contraseña" required>
+                </div>
+                <div class="row mt-5">
+                    <div class="col ml-4" >
+                        <input type="submit" id="Register" class="btn btn-costum btn-success" value="Iniciar sesión"></input>
                     </div>
+                    <div class="col ml-4  ">
+                        
+                            <a class="a-btn btn btn-info text-light" href="/links/type" style="border-radius: 10px;">Cuenta nueva</a>
+                        
+                    </div>
+                </div>
+            </form>
+
         </div>
-    </div>
+        
+ 
+            
+          
     <script src="/js/Login.js"></script>
+    
