--- a/src/views/links/AcademiasAll.hbs
+++ b/src/views/links/AcademiasAll.hbs
@@ -43,7 +43,7 @@
                                         <h4 class="mr-2">Descripción</h4>
                                     </div>
                                 </div>
-                                <p class="text-muted">
+                                <p class="contenedor w-100 text-muted">
                                     {{descripcion}}
                                 </p>
                             </div>
