--- a/src/views/links/UpdateStudent.hbs
+++ b/src/views/links/UpdateStudent.hbs
@@ -1,6 +1,9 @@
 {{> navStudent}}
+<head>
+    <link rel="stylesheet" href="/css/RegisterStudent.css">
+</head>
 <h1 class="text-light text-center mt-4">Actualizar datos del estudiante</h1>
-<div class="card-body mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
+<div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
 
     <div>
         <form method="POST" action="/links/UpdateStudent">
