maps in EstudiantePanel.hbs

--- a/src/views/links/EstudiantePanel.hbs
+++ b/src/views/links/EstudiantePanel.hbs
@@ -14,8 +14,8 @@
 						<img src="../Resources/tendencias.jpg" alt="">
 					</div>
 					<div class="shop-body">
-						<h3>Tendencias</h3>
-						<a href="#" class="cta-btn">Ir ahora <i class="fa fa-arrow-circle-right"></i></a>
+						<h3>Por ubicación</h3>
+						<a href="https://getdancenow.herokuapp.com/Map" class="cta-btn">Ir ahora <i class="fa fa-arrow-circle-right"></i></a>
 					</div>
 				</div>
 			</div>
