--- a/src/views/links/AcademiaInfo.hbs
+++ b/src/views/links/AcademiaInfo.hbs
@@ -1,6 +1,6 @@
 {{> navStudent}}
 <h1 class="text-light text-center mt-4">Informacion de la academia</h1>
-<div class="card-body mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
+<div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
         <form method="" action="#">
 
             <div class="row mt-4">
@@ -27,7 +27,7 @@
                 <h4 class="mt-2"> Descripción</h4>
             </div>
             <div class="row mt-2">
-                <textarea name="descripcion" cols="150" rows="4" disabled>{{academia.descripcion}}</textarea>
+                <textarea name="descripcion" cols="100" rows="4" disabled>{{academia.descripcion}}</textarea>
             </div>
         </form>
 </div>
