--- a/src/views/links/AcademiasAll.hbs
+++ b/src/views/links/AcademiasAll.hbs
@@ -5,7 +5,18 @@
 <div class="content mt-5">
     <div class="container">
         <div>
-            <div class="card-body">
+            <div class="card">
+
+                <div class="row mt-4">
+                    <div class="search mx-auto">
+                        <input onkeyup="SearchTargets()" type="text" class="searchTerm" id="Search"
+                            placeholder="Escribe el nombre de la academia">
+                        <button type="button" class="searchButton">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+
                 <div class="row mt-5">
                     {{#each academias}}
                     <div class="col-lg-4" name="Target">
@@ -56,4 +67,5 @@
             <!-- container -->
         </div>
     </div>
+    <script src="/js/Panel.js"></script>
 </div>
