--- a/src/views/links/ClasesAll.hbs
+++ b/src/views/links/ClasesAll.hbs
@@ -2,10 +2,24 @@
     <link rel="stylesheet" href="/css/AcademiasAll.css">
 </head>
 {{> navStudent}}
+
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+
 <div class="content mt-5">
     <div class="container">
         <div>
-            <div class="card-body">
+            <div class="card">
+
+                <div class="row mt-4">
+                    <div class="search mx-auto">
+                        <input onkeyup="SearchTargets()" type="text" class="searchTerm" id="Search"
+                            placeholder="Escribe el nombre de la clase">
+                        <button type="button" class="searchButton">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+
                 <div class="row mt-5">
                     {{#each horarios}}
                     <div class="col-lg-4" name="Target">
@@ -27,7 +41,11 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <button class="btn btn-dark"><a class=" text-light" href="/links/Inscripcion">Inscribirme</a></button>
+                                    <input type="hidden" name="cmd" value="_xclick">
+                                    <input type="hidden" name="business" value="abrahamx97@gmail.com">
+                                    <input type="hidden" name="item_name" value="{{clase.nombre}}">
+                                    <input type="hidden" name="amount" value="14.00">
+                                    <input type="submit" name="Inscribirme" class="btn btn-dark">
                                     <button class="btn btn-dark"><a class=" text-light" href="/links/ClassInfo/{{clase.id}}">Ver info</a></button>
                                 </div>
                             </div>
@@ -40,4 +58,7 @@
             <!-- container -->
         </div>
     </div>
+    <script src="/js/Panel.js"></script>
 </div>
+
+</form>
