fix update and delete

--- a/src/views/links/ClassInfo.hbs
+++ b/src/views/links/ClassInfo.hbs
@@ -3,6 +3,7 @@
 </head>
 {{> navStudent}}
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+
     <div class="content mt-5">
         <div class="container">
             <div>
@@ -19,11 +20,12 @@
                         <input type="hidden" name="cmd" value="_xclick">
                         <input type="hidden" name="business" value="abrahamx97@gmail.com">
                         <input type="hidden" name="item_name" value="{{clase.nombre}}">
-                        <input type="hidden" name="amount" value="800.00">
-                        <input type="submit" name="Inscribirme" class="btn btn-dark">
+                        <input type="hidden" name="amount" value="10.00">
+                        <input type="submit" name="Inscripción" value="Inscribirme" class="btn btn-dark">
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 </form>
