--- a/src/views/links/StudentSignup.hbs
+++ b/src/views/links/StudentSignup.hbs
@@ -18,7 +18,7 @@
             </div>
             <div class="row mt-4 ml-4 mr-4">
                 <h6><label>Correo electrónico</label></h6>
-                <input name="correo" type="text" class="form-control" placeholder="Correo electrónico" required>
+                <input name="correo" type="email" class="form-control" placeholder="Correo electrónico" required>
             </div>
             <div class="row mt-4 ml-4 mr-4">
                 <h6><label>Contraseña nueva</label></h6>
