--- a/src/views/links/ClasesAll.hbs
+++ b/src/views/links/ClasesAll.hbs
@@ -2,7 +2,6 @@
     <link rel="stylesheet" href="/css/AcademiasAll.css">
 </head>
 {{> navStudent}}
-
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
 
 <div class="content mt-5">
@@ -44,8 +43,8 @@
                                     <input type="hidden" name="cmd" value="_xclick">
                                     <input type="hidden" name="business" value="abrahamx97@gmail.com">
                                     <input type="hidden" name="item_name" value="{{clase.nombre}}">
-                                    <input type="hidden" name="amount" value="14.00">
-                                    <input type="submit" name="Inscribirme" class="btn btn-dark">
+                                    <input type="hidden" name="amount" value="10.00">
+                                    <input type="submit" name="Inscripción" value="Inscribirme" class="btn btn-dark">
                                     <button class="btn btn-dark"><a class=" text-light" href="/links/ClassInfo/{{clase.id}}">Ver info</a></button>
                                 </div>
                             </div>
