--- a/src/views/links/ClassByID.hbs
+++ b/src/views/links/ClassByID.hbs
@@ -43,8 +43,8 @@
                                     <input type="hidden" name="cmd" value="_xclick">
                                     <input type="hidden" name="business" value="abrahamx97@gmail.com">
                                     <input type="hidden" name="item_name" value="{{clase.nombre}}">
-                                    <input type="hidden" name="amount" value="800.00">
-                                    <input type="submit" name="Inscribirme" class="btn btn-dark">
+                                    <input type="hidden" name="amount" value="10.00">
+                                    <input type="submit" name="Inscripción" value="Inscribirme" class="btn btn-dark">
                                     <button class="btn btn-dark"><a class=" text-light"
                                             href="/links/ClassInfo/{{clase.id}}">Ver info</a></button>
 
