--- a/src/views/links/AcademiaInfo.hbs
+++ b/src/views/links/AcademiaInfo.hbs
@@ -1,8 +1,10 @@
+<head>
+    <link rel="stylesheet" href="/css/AcademiasAll.css">
+</head>
 {{> navStudent}}
 <h1 class="text-light text-center mt-4">Informacion de la academia</h1>
 <div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
         <form method="" action="#">
-
             <div class="row mt-4">
                 <h6><label>Nombre de la academia</label></h6>
                 <input name="academy" type="text" class="form-control" value="{{academia.nombre}}" disabled>
