--- a/src/views/links/ClassByID.hbs
+++ b/src/views/links/ClassByID.hbs
@@ -4,11 +4,10 @@
 {{> navStudent}}
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
 
-<div class="content mt-5">
-    <div class="container">
-        <div>
+    <div class="content mt-5">
+        <div class="container">
+            <a href="#panel" class="btn-flotante">Inicio</a>
             <div class="card">
-
                 <div class="row mt-4">
                     <div class="search mx-auto">
                         <input onkeyup="SearchTargets()" type="text" class="searchTerm" id="Search"
@@ -63,8 +62,7 @@
             </div>
             <!-- container -->
         </div>
+        <script src="/js/Panel.js"></script>
     </div>
-    <script src="/js/Panel.js"></script>
-</div>
 
 </form>
