--- a/src/views/links/UpdateStudent.hbs
+++ b/src/views/links/UpdateStudent.hbs
@@ -1,8 +1,8 @@
-{{> navStudent}}
 <head>
-    <link rel="stylesheet" href="/css/RegisterStudent.css">
+    <link rel="stylesheet" href="/css/AcademiasAll.css">
 </head>
-<h1 class="text-light text-center mt-4">Actualizar datos del estudiante</h1>
+{{> navStudent}}
+<h1 class="text-light text-center mt-4">Mi cuenta</h1>
 <div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
 
     <div>
