--- a/src/views/partials/navStudent.hbs
+++ b/src/views/partials/navStudent.hbs
@@ -17,13 +17,13 @@
                 </div>
                 <!-- /LOGO -->
                 <!-- SEARCH BAR -->
-                <div class="col-auto">
+                <div class="col-auto" id="panel">
                     <span class="text">Panel del estudiante</span>
                 </div>
                 <!-- /SEARCH BAR -->
                 
                 <!-- ACCOUNT -->
-                <div class="col w-100  clearfix ">
+                <div class="col w-100">
                     <div class="header-ctn ">
                         <!-- Wishlist -->
                         <div>
