--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -7,7 +7,7 @@
 \*----------------------------*/
 
 body {
-    background: radial-gradient(#FFF176, #F57F17);
+    background-color: #f08621;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     color: #333;
@@ -45,7 +45,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #D10024;
+    color: #FFF;
     text-decoration: none;
     outline: none;
 }
