--- a/src/views/links/ClasesAll.hbs
+++ b/src/views/links/ClasesAll.hbs
@@ -4,11 +4,10 @@
 {{> navStudent}}
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
 
-<div class="content mt-5">
-    <div class="container">
-        <div>
+    <div class="content mt-5">
+        <div class="container">
+            <a href="#panel" class="btn-flotante">Inicio</a>
             <div class="card">
-
                 <div class="row mt-4">
                     <div class="search mx-auto">
                         <input onkeyup="SearchTargets()" type="text" class="searchTerm" id="Search"
@@ -45,7 +44,8 @@
                                     <input type="hidden" name="item_name" value="{{clase.nombre}}">
                                     <input type="hidden" name="amount" value="10.00">
                                     <input type="submit" name="Inscripción" value="Inscribirme" class="btn btn-dark">
-                                    <button class="btn btn-dark"><a class=" text-light" href="/links/ClassInfo/{{clase.id}}">Ver info</a></button>
+                                    <button class="btn btn-dark"><a class=" text-light"
+                                            href="/links/ClassInfo/{{clase.id}}">Ver info</a></button>
                                 </div>
                             </div>
                         </div>
@@ -56,8 +56,7 @@
             </div>
             <!-- container -->
         </div>
+        <script src="/js/Panel.js"></script>
     </div>
-    <script src="/js/Panel.js"></script>
-</div>
 
 </form>
