--- a/src/views/links/DeleteStudent.hbs
+++ b/src/views/links/DeleteStudent.hbs
@@ -1,8 +1,7 @@
-{{> navStudent}}
-
 <head>
-    <link rel="stylesheet" href="/css/RegisterStudent.css">
+    <link rel="stylesheet" href="/css/AcademiasAll.css">
 </head>
+{{> navStudent}}
 <form method="POST" action="/links/DeleteStudent">
     <h1 class="text-light text-center mt-4">Eliminar estudiante</h1>
     <div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
