--- a/src/views/links/EstudiantePanel.hbs
+++ b/src/views/links/EstudiantePanel.hbs
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/css/panel.css">
+    <link rel="stylesheet" href="/css/AcademiasAll.css">
 </head>
 {{> navStudent}}
 <div class="section">
