--- a/src/views/links/StudentSignup.hbs
+++ b/src/views/links/StudentSignup.hbs
@@ -1,7 +1,7 @@
-{{> navigation}}
 <head>
-    <link rel="stylesheet" href="/css/RegisterStudent.css">
+    <link rel="stylesheet" href="/css/AcademiasAll.css">
 </head>
+{{> navigation}}
 <h1 class="text-light text-center mt-4">Registro del estudiante</h1>
 <div class="card mx-auto mt-5" style="width: 90%; margin-bottom: 150px;">
     <div>
