--- a/src/views/partials/navStudent.hbs
+++ b/src/views/partials/navStudent.hbs
@@ -9,7 +9,7 @@
                 <!-- LOGO -->
                 <div class="col-md-3">
                     <div>
-                        <a href="/links/PanelEstudiante" class="logo">
+                        <a href="/links/PanelEstudiante" class="logo" id="panel">
                             <img src="/Resources/logo.png" width="35%" height="35%" loading="lazy"
                                 alt="logo_GetDanceNow">
                         </a>
@@ -17,7 +17,7 @@
                 </div>
                 <!-- /LOGO -->
                 <!-- SEARCH BAR -->
-                <div class="col-auto" id="panel">
+                <div class="col-auto">
                     <span class="text">Panel del estudiante</span>
                 </div>
                 <!-- /SEARCH BAR -->
