--- a/src/views/links/ClassInfo.hbs
+++ b/src/views/links/ClassInfo.hbs
@@ -2,30 +2,31 @@
     <link rel="stylesheet" href="/css/AcademiasAll.css">
 </head>
 {{> navStudent}}
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
 
-    <div class="content mt-5">
-        <div class="container">
-            <div>
-                <div class="text-center card">
-                    <h6 class="mt-4">Nombre de la clase</h6>
-                    <div class="col">
-                        <input name="nombre" type="text" class="form-control" value="{{clase.nombre}}" disabled>
-                    </div>
-                    <h6 class="mt-4">Alumnos máximo</h6>
-                    <div class="col">
-                        <input name="nombre" type="number" class="form-control" value="{{clase.alumnosMax}}" disabled>
-                    </div>
-                    <div class="col">
+
+<div class="content mt-5">
+    <div class="container">
+        <div>
+            <div class="text-center card">
+                <h6 class="mt-4">Nombre de la clase</h6>
+                <div class="col">
+                    <input name="nombre" type="text" class="form-control" value="{{clase.nombre}}" disabled>
+                </div>
+                <h6 class="mt-4">Alumnos máximo</h6>
+                <div class="col">
+                    <input name="nombre" type="number" class="form-control" value="{{clase.alumnosMax}}" disabled>
+                </div>
+                <div class="col">
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_xclick">
                         <input type="hidden" name="business" value="abrahamx97@gmail.com">
+                        <input type="hidden" name="currency_code" value="MXN">
                         <input type="hidden" name="item_name" value="{{clase.nombre}}">
-                        <input type="hidden" name="amount" value="10.00">
+                        <input type="hidden" name="amount" value="99.00">
                         <input type="submit" name="Inscripción" value="Inscribirme" class="btn btn-dark">
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-
-</form>
+</div>
