--- a/src/views/links/StudentSignup.hbs
+++ b/src/views/links/StudentSignup.hbs
@@ -26,7 +26,7 @@
             </div>
             <div class="row mt-3 ml-4">
                 <input type="submit" name="Register" class="btn-hover color-8" value="Registrarme">
-                <button class="btn-hover color-1"><a class=" text-light" href="/links/type">Cancelar</a></button>
+                <button type="button" class="btn-hover color-8"><a class=" text-light" href="/links/type">Cancelar</a></button>
             </div>
         </form>
     </div>
