--- a/src/views/links/ClassInfo.hbs
+++ b/src/views/links/ClassInfo.hbs
@@ -16,17 +16,71 @@
                 <div class="col">
                     <input name="nombre" type="number" class="form-control" value="{{clase.alumnosMax}}" disabled>
                 </div>
-                <div class="col">
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                        <input type="hidden" name="cmd" value="_xclick">
-                        <input type="hidden" name="business" value="abrahamx97@gmail.com">
-                        <input type="hidden" name="currency_code" value="MXN">
-                        <input type="hidden" name="item_name" value="{{clase.nombre}}">
-                        <input type="hidden" name="amount" value="99.00">
-                        <input type="submit" name="Inscripción" value="Inscribirme" class="btn btn-dark">
-                    </form>
-                </div>
+                <div id="paypal-button-container" class="mt-4"></div>
             </div>
         </div>
     </div>
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
 </div>
+
+<script>
+
+    // Render the PayPal button
+
+    paypal.Button.render({
+
+        // Set your environment
+
+        env: 'sandbox', // sandbox | production
+
+        // Specify the style of the button
+
+        style: {
+            layout: 'vertical',  // horizontal | vertical
+            size: 'medium',    // medium | large | responsive
+            shape: 'rect',      // pill | rect
+            color: 'gold'       // gold | blue | silver | black
+        },
+
+        // Specify allowed and disallowed funding sources
+        //
+        // Options:
+        // - paypal.FUNDING.CARD
+        // - paypal.FUNDING.CREDIT
+        // - paypal.FUNDING.ELV
+
+        funding: {
+            allowed: [paypal.FUNDING.CARD, paypal.FUNDING.CREDIT],
+            disallowed: []
+        },
+
+        // PayPal Client IDs - replace with your own
+        // Create a PayPal app: https://developer.paypal.com/developer/applications/create
+
+        client: {
+            sandbox: 'AZDxjDScFpQtjWTOUtWKbyN_bDt4OgqaF4eYXlewfBP4-8aqX3PiV8e1GWU6liB2CUXlkA59kJXE7M6R',
+            production: '<insert production client id>'
+        },
+
+        payment: function (data, actions) {
+            return actions.payment.create({
+                payment: {
+                    transactions: [
+                        {
+                            amount: { total: '120.00', currency: 'MXN' }
+                        }
+                    ]
+                }
+            });
+        },
+
+        onAuthorize: function (data, actions) {
+            return actions.payment.execute().then(function () {
+                window.alert('¡Feliciades, pago realizado!');
+                location.href = "/links/inscripcion";
+            });
+        }
+
+    }, '#paypal-button-container');
+
+</script>
