--- a/src/views/links/StudentSignup.hbs
+++ b/src/views/links/StudentSignup.hbs
@@ -18,16 +18,21 @@
             </div>
             <div class="row mt-4 ml-4 mr-4">
                 <h6><label>Correo electrónico</label></h6>
-                <input name="correo" type="email" class="form-control" placeholder="Correo electrónico" required>
+                <input name="correo" type="email" class="form-control" placeholder="Correo electrónico" id="email"
+                    required>
+                <span class="mt-4" id="emailOK" style="color:blue"></span>
             </div>
             <div class="row mt-4 ml-4 mr-4">
                 <h6><label>Contraseña nueva</label></h6>
-                <input name="password" type="password" class="form-control" placeholder="Contraseña nueva" required>
+                <input name="password" type="password" class="form-control" placeholder="Contraseña nueva" minlength="8"
+                    maxlength="20" required>
             </div>
             <div class="row mt-3 ml-4">
                 <input type="submit" name="Register" class="btn-hover color-8" value="Registrarme">
-                <button type="button" class="btn-hover color-8"><a class=" text-light" href="/links/type">Cancelar</a></button>
+                <button type="button" class="btn-hover color-8"><a class=" text-light"
+                        href="/links/type">Cancelar</a></button>
             </div>
         </form>
     </div>
+    <script src="/js/RegisterStudent.js"></script>
 </div>
