--- a/src/views/links/UpdateStudent.hbs
+++ b/src/views/links/UpdateStudent.hbs
@@ -11,17 +11,18 @@
 
                 <div class="col">
                     <h6><label>Nombre</label></h6>
-                    <input name="nombre" type="text" class="form-control" value="{{student.nombre}}"/>
+                    <input name="nombre" type="text" class="form-control" value="{{student.nombre}}" />
                 </div>
                 <div class="col mr-4">
                     <h6><label>Apellidos</label></h6>
-                    <input name="apellido" type="text" class="form-control" value="{{student.apellido}}"/>
+                    <input name="apellido" type="text" class="form-control" value="{{student.apellido}}" />
                 </div>
             </div>
             <div class="row mt-3 ml-4">
                 <input type="submit" name="Update" id="Update" class="btn-hover color-8" value="Actualizar">
                 <button class="btn-hover color-8"><a class=" text-light"
                         href="/links/PanelEstudiante">Cancelar</a></button>
+                <a href="/links/DeleteStudent" class="btn">Deseo eliminar mi cuenta</a>
             </div>
         </form>
     </div>
