--- a/src/views/partials/navStudent.hbs
+++ b/src/views/partials/navStudent.hbs
@@ -33,9 +33,9 @@
                             </a>
                         </div>
                         <div>
-                            <a href="/links/DeleteStudent">
-                                <i class="fa fa-trash-o "></i>
-                                <span>Eliminar</span>
+                            <a href="/links/misclases">
+                                <i class="fa fa-book "></i>
+                                <span>Mis clases</span>
                             </a>
                         </div>
                         <!-- Mi cuenta -->
