--- a/src/views/links/AcademiasAll.hbs
+++ b/src/views/links/AcademiasAll.hbs
@@ -20,7 +20,7 @@
             <div class="row mt-5">
                 {{#each academias}}
                 <div class="col-lg-4" name="Target">
-                    <div class="text-center card-box">
+                    <div class="text-center card-box1">
                         <div class="member-card pt-2 pb-2">
                             <div class="col">
                                 <h4 class="mr-4">{{nombre}}</h4>
