--- a/src/public/css/AcademiasAll.css
+++ b/src/public/css/AcademiasAll.css
@@ -147,7 +147,7 @@ body{
 }
 
 
-.card-box {
+.card-box1 {
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 30px;
@@ -156,10 +156,9 @@ body{
     transition: 0.4s;
 }
 
-.card-box:hover {
+.card-box1:hover {
     transform: scale(0.9, 0.9);
     box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25), -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
-    background-color: #00B4CC;
 }
 
 .social-links li a {
