--- a/src/views/links/StudentSignup.hbs
+++ b/src/views/links/StudentSignup.hbs
@@ -9,11 +9,13 @@
             <div class="row mt-4 ml-2">
                 <div class="col">
                     <h6><label>Nombre</label></h6>
-                    <input name="nombre" type="text" class="form-control" placeholder="Nombre" required>
+                    <input name="nombre" type="text" class="form-control" placeholder="Nombre" minlength="4"
+                    maxlength="40" required pattern="[A-Za-z0-9]+" title="Formato: Sólo se aceptan letras y números. Tamaño mínimo: 4. Tamaño máximo: 40">
                 </div>
                 <div class="col mr-4">
                     <h6><label>Apellidos</label></h6>
-                    <input name="apellidos" type="text" class="form-control" placeholder="Apellidos" required>
+                    <input name="apellidos" type="text" class="form-control" placeholder="Apellidos" minlength="4"
+                    maxlength="40" required pattern="[A-Za-z0-9]+" title="Formato: Sólo se aceptan letras y números. Tamaño mínimo: 4. Tamaño máximo: 40">
                 </div>
             </div>
             <div class="row mt-4 ml-4 mr-4">
@@ -24,8 +26,8 @@
             </div>
             <div class="row mt-4 ml-4 mr-4">
                 <h6><label>Contraseña nueva</label></h6>
-                <input name="password" type="password" class="form-control" placeholder="Contraseña nueva" minlength="8"
-                    maxlength="20" required>
+                <input name="password" type="password" class="form-control" placeholder="Contraseña nueva" minlength="8" required
+                title="Tamaño mínimo: 8.">
             </div>
             <div class="row mt-3 ml-4">
                 <input type="submit" name="Register" class="btn-hover color-8" value="Registrarme">
